[package]
name = "postgressBazar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7.1", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
dashmap = "5.5.0"
tokio = { version = "1.29.1", features = ["full"] }
reqwest = { version = "0.11.18" }
serde = "1.0.183"
serde_json = "1.0.104"
chrono = { version = "0.4.28", features = ["serde"] }
substring = "1.4.5"
# add rocket creat
rocket = { version = "0.5.0-rc.1", features = ["json"] }
warp = "0.3.6"
local-ip-address = "0.5.6"


